# GameNative

app/: build.gradle.kts
app/src/main/cpp/extras/: CMakeLists.txt  evshim.c
app/src/main/cpp/wilhelm/: CMakeLists.txt  fsfix.c  fsfix.cpp
app/src/main/java/app/gamenative/: PrefManager.kt
app/src/main/java/app/gamenative/service/: SteamService.kt
app/src/main/java/app/gamenative/ui/screen/settings/: SettingsGroupInterface.kt
app/src/main/java/app/gamenative/ui/screen/xserver/: XServerScreen.kt
app/src/main/java/com/winlator/contentdialog/: NavigationDialog.java
app/src/main/java/com/winlator/renderer/: GLRenderer.java
app/src/main/java/com/winlator/renderer/material/: SGSRMaterial.java
app/src/main/java/com/winlator/xenvironment/components/: BionicProgramLauncherComponent.java
app/src/main/res/values/: strings.xml
